--- a/assets/styles.css
+++ b/assets/styles.css
@@ -177,3 +177,47 @@ font-family: sans-serif;
     left: 450px;
     top: -100px;
 }
+.section__container4{
+    margin-top: 100px;
+    padding: 0px 50px;
+    display: flex;
+    flex-direction: column;
+}
+.experiencia__section{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.img__exp{
+    width: 60px;
+    height: 60px;
+}
+.figure__img{
+    width: 200px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    box-shadow: 0px 0px 20px rgb(158, 158, 158);
+    color: white;
+}
+.figure__img:nth-child(1){
+    background-color: #96ecba;
+}
+.figure__img:nth-child(2){
+    background-color: #ee885c;
+}
+.figure__img:nth-child(3){
+    background-color: #7d92b4;
+}
+.figure__img:nth-child(4){
+    background-color: #67577e;
+}
+.figure__img:hover{
+    cursor: pointer;
+}
