--- a/assets/styles.css
+++ b/assets/styles.css
@@ -221,3 +221,29 @@ font-family: sans-serif;
 .figure__img:hover{
     cursor: pointer;
 }
+.section__container5{
+    display: flex;
+}
+.div__imagenes{
+    display: flex;
+    gap: 30px;
+}
+.div__imagenesexpe{
+    height: 300px;
+    width: 300px;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 0px 20px rgb(158, 158, 158);
+    align-items: center;
+    justify-content: center;
+}
+.logos__experiencia{
+    width: 50px;
+    height: 50px;
+    border-radius: 20%;
+    box-shadow: 0px 0px 20px rgb(158, 158, 158);
+}
+.div__imagenes{
+
+}
