--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,9 @@
+body{
+    margin: 0px 200px;
+    flex-direction: column;
+    scroll-behavior: smooth;
+    overflow-y: scroll;
+}
 *{
 margin:0;
 box-sizing:border-box;
@@ -10,6 +16,7 @@ font-family: sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
+   
 }
 .nav__header{
     display: flex;
@@ -30,7 +37,7 @@ font-family: sans-serif;
 .link__div:hover, .link__nav:hover{
     color: #fba722; 
 }
-.button__nav, .btnDownCv{
+.button__nav, .btnDownCv, .subtitu__btn, .btn__proyectos{
     background:linear-gradient(to bottom, #f5c372, #fba722);
     padding: 13px 20px;
     color: white;
@@ -40,13 +47,16 @@ font-family: sans-serif;
     border: transparent;
     box-shadow: 0px 5px 10px #c99f5d;
 }
-.button__nav:hover, .btnDownCv:hover, .btn__learnmore:hover{
+.button__nav:hover, .btnDownCv:hover, .btn__learnmore:hover, .subtitu__btn,
+.btn__proyectos{
     cursor: pointer;
 }
+
 .main{
     margin: 0px 200px;
     display: flex;
     flex-direction: column;
+    scroll-behavior: smooth;
 }
 .container{
     display: flex;
@@ -68,7 +78,7 @@ font-family: sans-serif;
     color: rgb(88, 88, 88);
     padding: 35px 0px;
 }
-.btn1, .btnDownCv{
+.btn1, .btnDownCv, .subtitu__btn{
     padding: 13px 50px;
 }
 .section2__div1, .section2__div2{
@@ -121,7 +131,7 @@ font-family: sans-serif;
     font-weight: bold;
     font-size: 40px;
 }
-.div__container2{
+.div__container2, .section__subtitu{
     flex: 1;
     margin-right: 150px;
 }
@@ -223,6 +233,7 @@ font-family: sans-serif;
 }
 .section__container5{
     display: flex;
+    padding: 20px 55px;
 }
 .div__imagenes{
     display: flex;
@@ -244,6 +255,45 @@ font-family: sans-serif;
     border-radius: 20%;
     box-shadow: 0px 0px 20px rgb(158, 158, 158);
 }
-.div__imagenes{
+.subtitu__parrafo{
+    padding: 40px 0px;
+}
+.section8{
+    padding: 20px 50px;
+    display: flex;
+    flex-direction: column;
+}
+.subtitulo__section8{
+    color: #fba722;
+    font-weight: bold;
+    font-size: 40px;
+    text-align: center;
+}
+.parrafo__section8{
+    padding: 60px 0px;
+    text-align: center;
+}
+.figures__section8{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
 
+.figure__proyectos{
+    width: 200px;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 8px;
+    box-shadow: 0px 0px 20px rgb(158, 158, 158);
+    color: white;
+}
+.btn__proyectos{
+    display: flex;
+    align-items: flex-end;
+}
+.img__section8{
+    width: 200px;
+    height: 400px;
+    border-radius: 8px;
 }
