--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,14 +1,183 @@
-body{
-    margin: 0px 200px;
-    flex-direction: column;
+body,html{
+    width: 100%;
+    padding: 0;
     scroll-behavior: smooth;
-    overflow-y: scroll;
 }
 *{
-margin:0;
-box-sizing:border-box;
-padding:0;
-font-family: sans-serif;
+    margin:0;
+    box-sizing:border-box;
+    padding:0;
+    font-family: sans-serif;
+}
+
+/*----------------MENU */
+*, *::before, *::after {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    list-style: none;
+    list-style-type: none;
+    text-decoration: none;
+    -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+}
+body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 1rem;
+    font-weight: normal;
+    line-height: 1.5;
+    color: #252a32;
+    background: #f1f5f8;
+}
+img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+a, button {
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    text-decoration: none;
+}
+.container {
+    max-width: 80rem;
+    width: 100%;
+    height: auto;
+    padding: 0 2rem;
+    margin: 0 auto;
+}
+.brand {
+    font-family: inherit;
+    font-size: 1.75rem;
+    font-weight: 700;
+    line-height: inherit;
+    color: #fba722;
+    text-transform: uppercase;
+    text-rendering: optimizeLegibility;
+}
+.navbar {
+    width: 100%;
+    height: 50px;
+    padding-left: 18%;
+    position: fixed;
+    color: #252a32;
+    background: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 3px rgba(0, 0, 0, 0.24);
+}
+@media only screen and (min-width: 768px) {
+    .navbar {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin: 0 auto;
+   }
+}
+.navbar .navbrand {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.navbar .navbrand .burger {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border: none;
+    outline: none;
+    background: none;
+    transition: all 0.35s ease;
+}
+.navbar .navbrand .burger-close {
+    display: none;
+}
+.navbar .navbrand .burger.active .burger-open {
+    display: none;
+}
+.navbar .navbrand .burger.active .burger-close {
+    display: flex;
+}
+@media only screen and (min-width: 768px) {
+    .navbar .navbrand .burger {
+        display: none;
+   }
+}
+.navbar .menu {
+    width: 100%;
+    height: 0;
+    overflow: hidden;
+    transition: all 0.5s ease;
+    display: flex;
+    gap: 30px;
+}
+.navbar .menu-item {
+    margin: 0.5rem 0;
+}
+.navbar .menu-link {
+    font-family: inherit;
+    font-size: 1rem;
+    font-weight: 500;
+    line-height: inherit;
+    color: #252a32;
+    text-transform: none;
+    text-rendering: optimizeLegibility;
+    transition: all 0.35s ease;
+}
+.navbar .menu-link:hover {
+    color: #fba722;
+}
+.navbar .menu.active {
+    width: 100%;
+    height: 10rem;
+    margin: 1rem 0;
+}
+@media only screen and (min-width: 768px) {
+    .navbar .menu {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        height: auto;
+   }
+    .navbar .menu-item {
+        padding: 0;
+        margin: 0 0.5rem;
+   }
+}
+.navbar .social {
+    display: none;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.navbar .social-item {
+    font-size: 1.65rem;
+    line-height: inherit;
+    margin: 0 0.5rem;
+    color: #252a32;
+    transition: all 0.35s ease;
+}
+.navbar .social-item:hover {
+    color: #148cb8;
+}
+@media only screen and (min-width: 768px) {
+    .navbar .social {
+        display: flex;
+   }
+}
+/*--------------END MENU */
+.section2__img{
+    margin-top: 50px;
+    width: 250px;
+    height: auto;
 }
 .header{
     height: 70px;
@@ -16,10 +185,12 @@ font-family: sans-serif;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
    
 }
 .nav__header{
     display: flex;
+    flex-wrap: wrap;
     gap: 50px;
     list-style: none;
     justify-content: center;
@@ -60,10 +231,18 @@ font-family: sans-serif;
 }
 .container{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-left: 15%;
+    margin-right: 15%;
+    padding-bottom: 80px;
+    
 }
 .section1__container{
     flex: 1;
-    padding: 80px 0px;
+    padding-top: 80px;
+    margin-right: 15%;
 }
 .section2__container{
     flex: 1;
@@ -81,6 +260,9 @@ font-family: sans-serif;
 .btn1, .btnDownCv, .subtitu__btn{
     padding: 13px 50px;
 }
+.btn1{
+    margin: 0px 150px; 
+}
 .section2__div1, .section2__div2{
     width: 350px;
     background-color: #ffffff;
@@ -89,7 +271,7 @@ font-family: sans-serif;
     display: flex;
     padding: 15px 20px;
     align-items: center;
-    position: relative;
+    
 }
 .img__sectiondiv1{
     height: 60px;
@@ -102,10 +284,7 @@ font-family: sans-serif;
     flex-direction: column;
     align-items: center;
 }
-.section2__div1{
-    top: -500px;
-    left: 460px;
-}
+
 .section2__div2{
     top: -200px;
     left: 45px;
@@ -119,17 +298,22 @@ font-family: sans-serif;
     padding-left: 50px;
     text-align: end;
 }
-.section__container3{
-    width: 350px;
-    box-shadow: 0px 0px 15px #ccc;
-}
 .container2{
     display: flex;
-    padding: 0px 50px;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 17%;
+    margin-right: 17%;
+    padding-bottom: 80px;
+}
+.contai__sec{
+    display: flex;
+    flex-direction: row;
 }
 .subtitulo__container2{
     font-weight: bold;
     font-size: 40px;
+    
 }
 .div__container2, .section__subtitu{
     flex: 1;
@@ -163,38 +347,43 @@ font-family: sans-serif;
     box-shadow: 0px 0px 15px #72a4fc;
 }
 .section__container3{
-    margin-right: 200px;
-    height: 380px;
+    width: 300px;
+    height: 500px;
+    box-shadow: 0px 0px 15px #ccc;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 0px 20px;
+    padding: 20px 20px;
+}
+.tarjetas__container2{
+  
+}
+.section__container333{
+    display: flex;
+    gap: 20px;
+    padding: 0px 400px;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .figura__emoji, .span__design, .parrafo2__container2{
     padding: 10px 0px;
 }
-.tarjetas__container2{
-    display: flex;
-}
-.emojicora{
-    position: relative;
-    left: 280px;
-    top: 20px;
-}
-.emojimal{
-    position: relative;
-    left: 450px;
-    top: -100px;
-}
+
 .section__container4{
     margin-top: 100px;
     padding: 0px 50px;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column;
+    margin-left: 17%;
+    margin-right: 17%;
 }
 .experiencia__section{
     display: flex;
+    flex-direction:row;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 50px;
@@ -233,13 +422,17 @@ font-family: sans-serif;
 }
 .section__container5{
     display: flex;
+    flex-wrap: wrap;
     padding: 20px 55px;
+    margin-left: 17%;
+    margin-right: 17%;
 }
 .div__imagenes{
     display: flex;
     gap: 30px;
 }
 .div__imagenesexpe{
+    margin-top: 30px;
     height: 300px;
     width: 300px;
     border-radius: 50%;
@@ -262,6 +455,8 @@ font-family: sans-serif;
     padding: 20px 50px;
     display: flex;
     flex-direction: column;
+    margin-left: 17%;
+    margin-right: 17%;
 }
 .subtitulo__section8{
     color: #fba722;
@@ -271,11 +466,12 @@ font-family: sans-serif;
 }
 .parrafo__section8{
     padding: 60px 0px;
-    text-align: center;
+    
 }
 .figures__section8{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
@@ -291,6 +487,10 @@ font-family: sans-serif;
 .btn__proyectos{
     display: flex;
     align-items: flex-end;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    text-align: center;
+    padding: 13px 55px;
 }
 .img__section8{
     width: 200px;
